# polaris_navigation

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  setup.py
config/: closest_obstacle_detector_params.yaml  follow_params.yaml
espeleo_control2/: CMakeLists.txt  package.xml  setup.py
espeleo_control2/launch/: demo.xml  navigation.launch.py  safe_nav_stack.launch.py
espeleo_control2/src/: feedback_linearization.py  vector_field_control.cpp
espeleo_control2/src/TODO/: follow_corridor.cpp
espeleo_planning2/: CMakeLists.txt  README.md  package.xml
espeleo_planning2/config/: path_from_equation.yaml  path_from_file.yaml  path_from_points.yaml  visualizer.rviz
espeleo_planning2/launch/: launch_planner.xml
espeleo_planning2/src/: path_from_file.cpp
launch/: demo.xml  test_obstacle_detection.xml
polaris_control/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
polaris_control/config/: closest_obstacle_detector_params.yaml  control_params.yaml  demo_rviz.rviz  pioneer_params.yaml  scout_params.yaml
polaris_control/launch/: demo.launch.py  feedback_linearization.launch.py  navigation.launch.py  safe_nav_stack.launch.py
polaris_control/scripts/: robot_simulator.py
polaris_control/src/: closest_obstacle_detector.cpp  feedback_linearization.py  vector_field_control.cpp
polaris_control/src/TODO/: follow_corridor.cpp  follow_wall.cpp
polaris_control/urdf/: model.urdf
polaris_planning/: CMakeLists.txt  README.md  package.xml
polaris_planning/config/: path_from_equation.yaml  path_from_file.yaml  path_from_points.yaml
polaris_planning/launch/: demo.xml  launch_planner.xml
polaris_planning/scripts/: tf_fixed.py
polaris_planning/src/: path_from_equation.cpp  path_from_file.cpp  path_from_points.cpp
scout-gz/: LICENSE  README.md
scout-gz/scout_description/: CMakeLists.txt
scout-gz/scout_description/launch/: display_mini.launch.py  spawn.launch.py
scout-gz/scout_description/params/: bridge.yaml
scout-gz/scout_description/sdf/: model.sdf
scout-gz/scout_description/urdf/: mini.xacro  scout_mini.gazebo  scout_mini.urdf  scout_mini.xacro
scout-gz/scout_gazebo_sim/: CMakeLists.txt
scout-gz/scout_gazebo_sim/launch/: scout_mini_sdf.launch.py  scout_mini_urdf.launch.py
scout-gz/scout_gazebo_sim/params/: bridge.yaml
scout-gz/scout_navigation/: CMakeLists.txt  package.xml
scout-gz/scout_navigation/launch/: bringup_launch.py  nav2_scout_mini.launch.py
scout-gz/scout_navigation/params/: nav2_params.yaml
scout-gz/scout_navigation/scripts/: gt.py  odometry_to_tf.py
src/: closest_obstacle_detector.cpp  feedback_linearization.py  vector_field_control.cpp
src/TODO/: closest_obstacle.cpp  feedback_linearization.cpp  follow_wall.cpp
