<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- ============================================== -->
  <!-- 1. Package Metadata Section -->
  <!-- ============================================== -->
  <name>espeleo_control2</name>
  <version>0.1.0</version>
  <description>
    Generates and publishes control input based on vector fields for CORO lab robots at UFMG.
  </description>
  <url type="website">https://github.com/ITVRoC/espeleo_control2</url>
  <author email="baiaojfr@gmail.com">João Baião</author>
  <maintainer email="baiaojfr@gmail.com">João Baião</maintainer>
  <license>MIT</license>

  <!-- ============================================== -->
  <!-- 2. Build System Dependencies -->
  <!-- ============================================== -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- ============================================== -->
  <!-- 3. Core ROS Dependencies -->
  <!-- ============================================== -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- ============================================== -->
  <!-- 4. Math/Utility Dependencies -->
  <!-- ============================================== -->
  <depend>eigen3_cmake_module</depend>
  
  <!-- ============================================== -->
  <!-- 5. Execution Dependencies -->
  <!-- ============================================== -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>rclpy</depend>

  <!-- ============================================== -->
  <!-- 6. Testing Dependencies -->
  <!-- ============================================== -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ============================================== -->
  <!-- 7. Export Section -->
  <!-- ============================================== -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
